unpackaged/main/default/objects/Account/fields/Legal_CSM__c.field-meta.xml
<CustomField>
    <fullName>Legal_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>