unpackaged/main/default/objects/Account/fields/Legal_Customer_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Legal_Customer_Segmentation__c</fullName>
    <label>Legal Customer Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TECH_TOUCH</fullName>
                <default>true</default>
                <label>Tech Touch</label>
            </value>
            <value>
                <fullName>MID_TOUCH</fullName>
                <label>Mid Touch</label>
            </value>
            <value>
                <fullName>HIGH_TOUCH</fullName>
                <label>High Touch</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>