unpackaged/main/default/objects/Account/fields/Legal_Customer_Support__c.field-meta.xml
<CustomField>
    <fullName>Legal_Customer_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Customer Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>