unpackaged/main/default/objects/Account/fields/Legal_Discarded_Information__c.field-meta.xml
<CustomField>
    <fullName>Legal_Discarded_Information__c</fullName>
    <label>Legal Discarded Information</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Legal_Discarded_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No (Valid) phone number</fullName>
            </value>
            <value>
                <fullName>Repeatedly not reached</fullName>
            </value>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>Cannot be covered with Legal packages</fullName>
            </value>
            <value>
                <fullName>Several times not reached</fullName>
            </value>
            <value>
                <fullName>Shop is being planned</fullName>
            </value>
            <value>
                <fullName>Shop is no longer active</fullName>
            </value>
            <value>
                <fullName>Business abandoned</fullName>
            </value>
            <value>
                <fullName>Does not fit the TS code</fullName>
            </value>
            <value>
                <fullName>Service contractor</fullName>
            </value>
            <value>
                <fullName>Feels legally secure</fullName>
            </value>
            <value>
                <fullName>Ghosted / doesn’t answer anymore</fullName>
            </value>
            <value>
                <fullName>Not ready to talk</fullName>
            </value>
            <value>
                <fullName>Satisfied with the Händlerbund</fullName>
            </value>
            <value>
                <fullName>Contractually bound to Händlerbund</fullName>
            </value>
            <value>
                <fullName>Satisfied with IT-Recht Kanzlei</fullName>
            </value>
            <value>
                <fullName>Contractually bound to IT-Recht Kanzlei</fullName>
            </value>
            <value>
                <fullName>Satisfied with eRecht24</fullName>
            </value>
            <value>
                <fullName>Contractually bound to eRecht24</fullName>
            </value>
            <value>
                <fullName>Janolaw</fullName>
            </value>
            <value>
                <fullName>Own lawyer</fullName>
            </value>
            <value>
                <fullName>Other solution / does not believe in TS Legal</fullName>
            </value>
            <value>
                <fullName>Has an internal data protection officer</fullName>
            </value>
            <value>
                <fullName>Contractually bound to external data protection officer</fullName>
            </value>
            <value>
                <fullName>Satisfied with external data protection officer</fullName>
            </value>
            <value>
                <fullName>Contractually bound to Cortina Consult</fullName>
            </value>
            <value>
                <fullName>Satisfied with Cortina Consult</fullName>
            </value>
            <value>
                <fullName>Contractually bound to datenschutz-ruhr.de</fullName>
            </value>
            <value>
                <fullName>Satisfied with datenschutz-ruhr.de</fullName>
            </value>
            <value>
                <fullName>Contractually bound to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>