unpackaged/main/default/objects/Account/fields/Legal_Discarded_Reason__c.field-meta.xml
<CustomField>
    <fullName>Legal_Discarded_Reason__c</fullName>
    <label>Legal Discarded Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead Quality</fullName>
            </value>
            <value>
                <fullName>Rejected by TS</fullName>
            </value>
            <value>
                <fullName>Customer says no (Legal)</fullName>
            </value>
            <value>
                <fullName>Customer says no (Datenschutz - Ultimate)</fullName>
            </value>
            <value>
                <fullName>absolutely no interest/ no further contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>