unpackaged/main/default/objects/Account/fields/Legal_multiyear_contract__c.field-meta.xml
<CustomField>
    <fullName>Legal_multiyear_contract__c</fullName>
    <description>needed for the legal SalesReport</description>
    <label>Legal multiyear contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 year contract</fullName>
            </value>
            <value>
                <fullName>3 year contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>