unpackaged/main/default/objects/Account/fields/Legal_Only__c.field-meta.xml
<CustomField>
    <fullName>Legal_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The checkbox is checked if the customer only has legal products (and no shop-related products)</description>
    <label>Legal Only</label>
    <type>Checkbox</type>
</CustomField>