unpackaged/main/default/objects/Account/fields/Legal_Sales_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Legal_Sales_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Sales Responsible</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Legal Sales Manager</value>
        </filterItems>
        <filterItems>
            <field>User.FirstName</field>
            <operation>equals</operation>
            <value>legal-api</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>