unpackaged/main/default/objects/Account/fields/Legal_Services_Contact__c.field-meta.xml
<CustomField>
    <fullName>Legal_Services_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Services Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Legal Services Contact)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>