unpackaged/main/default/objects/Account/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <label>Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Legal_Status_Picklist</valueSetName>
    </valueSet>
</CustomField>