unpackaged/main/default/objects/Account/fields/LegalCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>LegalCustomerNumber__c</fullName>
    <description>Shopware Customer Number</description>
    <label>Legal Customer Number</label>
    <type>TextArea</type>
</CustomField>