unpackaged/main/default/objects/Account/fields/legalForm_id__c.field-meta.xml
<CustomField>
    <fullName>legalForm_id__c</fullName>
    <label>Legal-Form</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Herkunftsland_der_Rechtsform__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>36</fullName>
                <label>A/S (Aktieselskab)</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>AG</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>AG &amp; Co. OHG</label>
            </value>
            <value>
                <fullName>39</fullName>
                <label>AG i.L. (AG in Liquidation)</label>
            </value>
            <value>
                <fullName>147</fullName>
                <label>Akciju Sabiedriba</label>
            </value>
            <value>
                <fullName>152</fullName>
                <label>Akcine bendrove</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>Akciová společnost</label>
            </value>
            <value>
                <fullName>185</fullName>
                <label>Akciová spolocnost</label>
            </value>
            <value>
                <fullName>232</fullName>
                <label>Aksjeselskap</label>
            </value>
            <value>
                <fullName>59</fullName>
                <label>Aktiengesellschaft</label>
            </value>
            <value>
                <fullName>65</fullName>
                <label>Aktiengesellschaft (AT)</label>
            </value>
            <value>
                <fullName>109</fullName>
                <label>Aktieselskabet</label>
            </value>
            <value>
                <fullName>93</fullName>
                <label>Aktionerno druzhestvo</label>
            </value>
            <value>
                <fullName>114</fullName>
                <label>Aktsiaselts</label>
            </value>
            <value>
                <fullName>231</fullName>
                <label>Allmennaksjeselskap</label>
            </value>
            <value>
                <fullName>228</fullName>
                <label>Andelsselskab med begrænset ansvar</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Andere (mit Firmenname angeben)</label>
            </value>
            <value>
                <fullName>124</fullName>
                <label>Anónimi Etería</label>
            </value>
            <value>
                <fullName>108</fullName>
                <label>Anpartsselskabet</label>
            </value>
            <value>
                <fullName>233</fullName>
                <label>Ansvarlig selskap</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>ApS (Anpartsselskab)</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>Athomihi Epihirisi</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Autre (précisez nom et statut)</label>
            </value>
            <value>
                <fullName>116</fullName>
                <label>Avoin yhtiö</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>B.V. (Besloten Vennootschap)</label>
            </value>
            <value>
                <fullName>201</fullName>
                <label>Besloten vennootschap met beperkte aansprakelijkheid</label>
            </value>
            <value>
                <fullName>167</fullName>
                <label>Besloten Venootschap</label>
            </value>
            <value>
                <fullName>129</fullName>
                <label>Betéti társaság</label>
            </value>
            <value>
                <fullName>166</fullName>
                <label>Commanditaire Vennootschap</label>
            </value>
            <value>
                <fullName>203</fullName>
                <label>Commanditaire vennootschap (203)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>