unpackaged/main/default/objects/Account/fields/Lift_forecast_value__c.field-meta.xml
<CustomField>
    <fullName>Lift_forecast_value__c</fullName>
    <formula>IF( Min_1_Shop_has_SI__c &gt;0 &amp;&amp; zz_expected_turnover__c &lt;  Turnover_by_average_basket__c, Turnover_by_average_basket__c, 
IF(Min_1_Shop_has_SI__c =0 &amp;&amp; zz_expected_turnover__c &lt;  Turnover_by_average_shopping_basket__c, Turnover_by_average_shopping_basket__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lift forecast value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>