unpackaged/main/default/objects/Account/fields/Lift_information__c.field-meta.xml
<CustomField>
    <fullName>Lift_information__c</fullName>
    <formula>&quot;Expected turnover: &quot; +TEXT( zz_expected_turnover__c )+ &quot; &quot; + TEXT(CurrencyIsoCode) + BR()+ 
&quot;Lift value: &quot; + TEXT( Lift_forecast_value__c) + &quot; &quot; + TEXT(CurrencyIsoCode) + BR()+ 
BR()+ 
&quot;Contract adj. at: &quot; +TEXT(zz_Contract_adjustment_at__c)+ BR()+ 
BR()+ 
&quot;Transaction volume Protections per year: &quot; + TEXT(zz_Transaction_volume_protections_p__c)+ &quot; &quot; + TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lift information</label>
    <type>Text</type>
</CustomField>