unpackaged/main/default/objects/Account/fields/Lift_information_old__c.field-meta.xml
<CustomField>
    <fullName>Lift_information_old__c</fullName>
    <label>Lift information (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>