unpackaged/main/default/objects/Account/fields/Lift_Information_with_format__c.field-meta.xml
<CustomField>
    <fullName>Lift_Information_with_format__c</fullName>
    <formula>Lift_information_old__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lift Information with format</label>
    <type>Text</type>
</CustomField>