unpackaged/main/default/objects/Account/fields/Main_partner__c.field-meta.xml
<CustomField>
    <fullName>Main_partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>main partner for this account, regardless of the different partners for the shops</description>
    <label>Main partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Main partner)</relationshipLabel>
    <relationshipName>PartnerAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>