unpackaged/main/default/objects/Account/fields/Managing_Director__c.field-meta.xml
<CustomField>
    <fullName>Managing_Director__c</fullName>
    <description>required for Agency Accounts</description>
    <label>Managing Director</label>
    <length>255</length>
    <type>Text</type>
</CustomField>