unpackaged/main/default/objects/Account/fields/manual_API_integration__c.field-meta.xml
<CustomField>
    <fullName>manual_API_integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>can be deleted according to Laura T. 
was used and filled for eTrusted Migration - data is not needed anymore</description>
    <label>manual API integration</label>
    <type>Checkbox</type>
</CustomField>