unpackaged/main/default/objects/Account/fields/max_churn_score__c.field-meta.xml
<CustomField>
    <fullName>max_churn_score__c</fullName>
    <label>Max Churn Score</label>
    <summarizedField>shop__c.churn_score__c</summarizedField>
    <summaryForeignKey>shop__c.company_id__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>