unpackaged/main/default/objects/Account/fields/Meeting_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Phone_Number__c</fullName>
    <description>Conference Phone Number e.g. ZOOM, Teams etc.</description>
    <label>Meeting Phone Number</label>
    <type>Phone</type>
</CustomField>