unpackaged/main/default/objects/Account/fields/Member_since__c.field-meta.xml
<CustomField>
    <fullName>Member_since__c</fullName>
    <label>Member since</label>
    <summarizedField>membership__c.valid_from__c</summarizedField>
    <summaryForeignKey>membership__c.company_id__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>