unpackaged/main/default/objects/Account/fields/Membership_valid_to__c.field-meta.xml
<CustomField>
    <fullName>Membership_valid_to__c</fullName>
    <label>Membership valid to</label>
    <summarizedField>membership__c.valid_to__c</summarizedField>
    <summaryForeignKey>membership__c.company_id__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>