unpackaged/main/default/objects/Account/fields/Min_1_Shop_has_SI__c.field-meta.xml
<CustomField>
    <fullName>Min_1_Shop_has_SI__c</fullName>
    <description>Wenn mindestens ein Shop hat SI dann wird das Feld auf true gesetzt</description>
    <label>Min 1 Shop has SI</label>
    <summarizedField>shop__c.Has_SI__c</summarizedField>
    <summaryFilterItems>
        <field>shop__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Customer Shop</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>shop__c.valid_to__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>shop__c.company_id__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>