unpackaged/main/default/objects/Account/fields/Min_HealthScore__c.field-meta.xml
<CustomField>
    <fullName>Min_HealthScore__c</fullName>
    <description>Minimum HealthScore of all this companies shops</description>
    <label>Min_HealthScore</label>
    <summarizedField>shop__c.HealthScore__c</summarizedField>
    <summaryFilterItems>
        <field>shop__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Customer Shop</value>
    </summaryFilterItems>
    <summaryForeignKey>shop__c.company_id__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>