unpackaged/main/default/objects/Account/fields/MonthlyPrice__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPrice__c</fullName>
    <inlineHelpText>Momentary Prime Monthly Price</inlineHelpText>
    <label>Monthly Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>