unpackaged/main/default/objects/Account/fields/MQL_contact__c.field-meta.xml
<CustomField>
    <fullName>MQL_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MQL was created after the account was put in the system by the lead management</description>
    <inlineHelpText>for already existing accounts with MQL</inlineHelpText>
    <label>MQL contact</label>
    <type>Checkbox</type>
</CustomField>