unpackaged/main/default/objects/Account/fields/MQL_discarded_reason__c.field-meta.xml
<CustomField>
    <fullName>MQL_discarded_reason__c</fullName>
    <description>for Lead Management only, to discard the mql and give a reason for the IDG team</description>
    <label>MQL discarded reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>discarded_reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blog</fullName>
                <isActive>false</isActive>
                <label>Blog</label>
            </value>
            <value>
                <fullName>consumer</fullName>
                <isActive>false</isActive>
                <label>consumer</label>
            </value>
            <value>
                <fullName>Exclusion catalogue</fullName>
            </value>
            <value>
                <fullName>No certification possible</fullName>
            </value>
            <value>
                <fullName>No company information</fullName>
                <isActive>false</isActive>
                <label>No company information</label>
            </value>
            <value>
                <fullName>No Onlineshop</fullName>
            </value>
            <value>
                <fullName>No phone number</fullName>
            </value>
            <value>
                <fullName>no quality</fullName>
                <label>No quality</label>
            </value>
            <value>
                <fullName>No URL</fullName>
                <isActive>false</isActive>
                <label>No URL</label>
            </value>
            <value>
                <fullName>no valid phone number</fullName>
                <isActive>false</isActive>
                <label>No valid phone number</label>
            </value>
            <value>
                <fullName>no valid URL</fullName>
                <isActive>false</isActive>
                <label>No valid URL</label>
            </value>
            <value>
                <fullName>service provider</fullName>
                <isActive>false</isActive>
                <label>Service provider</label>
            </value>
            <value>
                <fullName>Shop language not supported</fullName>
                <isActive>false</isActive>
                <label>Shop language not supported</label>
            </value>
            <value>
                <fullName>Shop not ready</fullName>
            </value>
            <value>
                <fullName>Too specialized</fullName>
                <isActive>false</isActive>
                <label>Too specialized</label>
            </value>
            <value>
                <fullName>URL offline</fullName>
                <isActive>false</isActive>
                <label>URL offline</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>