unpackaged/main/default/objects/Account/fields/Multichannel__c.field-meta.xml
<CustomField>
    <fullName>Multichannel__c</fullName>
    <description>how are they selling?</description>
    <label>Multichannel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Local store</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>