unpackaged/main/default/objects/Account/fields/My_Accounts_Forumla__c.field-meta.xml
<CustomField>
    <fullName>My_Accounts_Forumla__c</fullName>
    <description>This formula gives the possibility, to show all Accounts where a certain User is the Sales_Responsible and/or Legal_CSM</description>
    <formula>IF(OR(Legal_Sales_Responsible__c = $User.Id, Legal_CSM__c = $User.Id, Legal_Account_Manager__c = $User.Id,  OwnerId = $User.Id), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Accounts Forumla</label>
    <type>Text</type>
</CustomField>