unpackaged/main/default/objects/Account/fields/MyTS_end_of_life_note__c.field-meta.xml
<CustomField>
    <fullName>MyTS_end_of_life_note__c</fullName>
    <label>MyTS end of life note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>