unpackaged/main/default/objects/Account/fields/New_Potential_ShopDomain_Url__c.field-meta.xml
<CustomField>
    <fullName>New_Potential_ShopDomain_Url__c</fullName>
    <description>used for MC &quot;Crawler Additional Domain“</description>
    <label>New Potential Shop Domain Url</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>