unpackaged/main/default/objects/Account/fields/next_eTrusted_Migration_Date__c.field-meta.xml
<CustomField>
    <fullName>next_eTrusted_Migration_Date__c</fullName>
    <description>upcoming eTrusted Migration Date used for Customer Marketing to identify Shops with an upcoming Migration for onboarding</description>
    <label>next eTrusted Migration Date</label>
    <type>Date</type>
</CustomField>