unpackaged/main/default/objects/Account/fields/NL_Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>NL_Lead_Number__c</fullName>
    <description>For NL Lead distribution</description>
    <displayFormat>{0}</displayFormat>
    <label>NL Lead Number</label>
    <type>AutoNumber</type>
</CustomField>