unpackaged/main/default/objects/Account/fields/nl_round_robin_id__c.field-meta.xml
<CustomField>
    <fullName>nl_round_robin_id__c</fullName>
    <description>for NL Lead Sprinkler</description>
    <formula>MOD(Value( NL_Lead_Number__c ), 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NL Round Robin Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>