unpackaged/main/default/objects/Account/fields/normed_url__c.field-meta.xml
<CustomField>
    <fullName>normed_url__c</fullName>
    <label>Normed Url</label>
    <type>Url</type>
</CustomField>