unpackaged/main/default/objects/Account/fields/number_of_accounts__c.field-meta.xml
<CustomField>
    <fullName>number_of_accounts__c</fullName>
    <label>Number of Shops</label>
    <summaryForeignKey>shop__c.company_id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>