unpackaged/main/default/objects/Account/fields/Number_of_Additional_Account_Infos__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Additional_Account_Infos__c</fullName>
    <label># of Additional Account Infos</label>
    <summaryForeignKey>Additional_Account_Info__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>