unpackaged/main/default/objects/Account/fields/Number_of_Customer_Shops__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Customer_Shops__c</fullName>
    <label>Number of Customer Shops</label>
    <summaryFilterItems>
        <field>shop__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Customer Shop</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>shop__c.certificateStatus__c</field>
        <operation>notEqual</operation>
        <value>expired</value>
    </summaryFilterItems>
    <summaryForeignKey>shop__c.company_id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>