unpackaged/main/default/objects/Account/fields/Number_of_Customer_Shops_all_time__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Customer_Shops_all_time__c</fullName>
    <description>Number of all Customer Shops, regardless if active</description>
    <label>Number of Customer Shops (all-time)</label>
    <summaryFilterItems>
        <field>shop__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Customer Shop</value>
    </summaryFilterItems>
    <summaryForeignKey>shop__c.company_id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>