unpackaged/main/default/objects/Account/fields/Number_Of_New_Potential_ShopDomain__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_New_Potential_ShopDomain__c</fullName>
    <description>used for MC &quot;Crawler Additional Domain&quot;</description>
    <label>Number Of New Potential Shop Domain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>