unpackaged/main/default/objects/Account/fields/Number_of_Shops_with_Local_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shops_with_Local_Reviews__c</fullName>
    <label>Number of Shops with Local Reviews</label>
    <summaryFilterItems>
        <field>shop__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Customer Shop</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>shop__c.Has_Local_Reviews__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>shop__c.company_id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>