unpackaged/main/default/objects/Account/fields/Onboarding_Call__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ein Feld für Kunden bei denen onboarding Call getätigt wurde</description>
    <label>Onboarding Call</label>
    <type>Checkbox</type>
</CustomField>