unpackaged/main/default/objects/Account/fields/Online_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Online_Turnover__c</fullName>
    <label>Online Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>