unpackaged/main/default/objects/Account/fields/Opportunity_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Creation_Date__c</fullName>
    <description>used for XANT Reporting (XANT Success Date)</description>
    <label>Opportunity Creation Date</label>
    <type>DateTime</type>
</CustomField>