unpackaged/main/default/objects/Account/fields/Other_Shop_Domains__c.field-meta.xml
<CustomField>
    <fullName>Other_Shop_Domains__c</fullName>
    <label>Other Shop Domains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>