unpackaged/main/default/objects/Account/fields/Outbound_type__c.field-meta.xml
<CustomField>
    <fullName>Outbound_type__c</fullName>
    <description>new accounts created by the LM</description>
    <label>Outbound type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>ODG_IH</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
            <value>
                <fullName>E-Mails Campaigns</fullName>
                <label>E-Mail Campaigns</label>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Individual Mailing</fullName>
            </value>
            <value>
                <fullName>Legal_11880_cold</fullName>
            </value>
            <value>
                <fullName>Legal_tools_cold</fullName>
            </value>
            <value>
                <fullName>Legal_Partner_Agency Leads</fullName>
            </value>
            <value>
                <fullName>Legal_Campaign_cold</fullName>
            </value>
            <value>
                <fullName>Legal_Recycling Pool Leads</fullName>
            </value>
            <value>
                <fullName>Legal_Campaign</fullName>
                <isActive>false</isActive>
                <label>Legal_Campaign</label>
            </value>
            <value>
                <fullName>Legal_RT-Free</fullName>
                <isActive>false</isActive>
                <label>Legal_RT-Free</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>